--- a/gameoflife.yaml
+++ b/gameoflife.yaml
@@ -18,5 +18,5 @@
       command: mvn clean install
 
     - name: fetching war file in the ansible server
-      action: fetch src=/mnt/app/game-of-life/gameoflife-web/target/gameoflife.war dest=/mnt/app
+      action: fetch src=/mnt/app/game-of-life/gameoflife-web/target/gameoflife.war dest=/home/ansible/app
 
